fix: fixati i colori della dark mode

--- a/src/app/modules/shared/components/table-row/components/table-row-inner/table-row-inner.component.scss
+++ b/src/app/modules/shared/components/table-row/components/table-row-inner/table-row-inner.component.scss
@@ -1,1 +1,8 @@
 @import "../../table-row.component.scss";
+
+#farm-name {
+    color: var(--color-2);
+    font-weight: 600;
+    line-height: 1.5;
+    font-size: 16px;
+}
